# rodeo

./: .darklua.json  .gitignore  .gitmodules  .luaurc  .mcp.json  Cargo.toml  README.md  asphalt.lock.toml  asphalt.toml  mise.toml  package.json  pesde.toml  rir3.project.json  rodeo-test-xml-export.rbxmx  selene.toml  stylua.toml
.claude/skills/rodeo/: SKILL.md
.github/workflows/: docs.yml  release.yml
.lune/: azul.luau  build.luau  build_rodeo_binaries.luau  dark_rojo.luau
.rodeo/: .luaurc  demo.luau  io.luau  screenshot.luau  sync.luau
.rodeo/benchmarks/transforms/: config.luau  run_all.luau
bundled.luau/: init.luau
bundled.luau/commands/: build.luau  exec.luau  once.luau  serve.luau  status.luau
bundled.luau/utils/: ExecConnection.luau  StudioConnection.luau  VmPipeline.luau  colors.luau  constants.luau  execution.luau  output.luau  plugin.luau  sourcemap.luau
demo/: Place.rbxlx  default.project.json  hello.luau  simple.luau
dev/runtime/: init.luau  sourceModule.luau
docs/: .gitignore  api.md  astro.config.mjs  cli.md  docgen.luau  package-lock.json  package.json  runtime.md
docs/src/components/: EmptyThemeSelect.astro
docs/src/styles/: custom.css
lune_packages/: argparse.luau  rojo.bin.luau  selene.bin.luau  stylua.bin.luau
parent-exit/: Cargo.toml
parent-exit/src/: lib.rs
plugin/: .darklua.json  pesde.toml  plugin.project.json  sourcemap.json
plugin/src/: .luaurc  constants.luau  flags.luau  init.server.luau  reloader.luau  runtime.luau  ui.luau
plugin/src/components/: App.luau  AppProvider.luau  Button.luau  Checkbox.luau  Container.luau  HostInput.luau  Label.luau  RodeoLabel.luau  Row.luau  StatusIndicator.luau  TextInput.luau
plugin/src/context/: AppContext.luau
plugin/src/hooks/: useExecution.luau  useWebSocket.luau
plugins/: plugin_once_template.server.luau  plugin_serve_template.server.luau
plugins/once/: default.project.json  plugin.project.json
plugins/once/src/: init.server.luau
plugins/serve/: default.project.json  plugin.project.json
plugins/serve/src/: init.server.luau
plugins/shared/: constants.luau  reloader.luau  utils.luau
repros/: invalidUtf8PathHangs.test.ts  killedRunLeaksServe.test.ts  oversizedReturnHangs.test.ts  runHangsOnSpawnFailure.test.ts
rodeo-adapters/: init.luau
rodeo-adapters/lune/: default.project.json  map.luau  wally.toml
rodeo-adapters/lune/src/: fs.luau  process.luau  serde.luau  stdio.luau  task.luau
rodeo-cli/: Cargo.toml  build.rs
rodeo-cli/examples/: docs-gen.rs
rodeo-cli/filepatch/: Cargo.toml
rodeo-cli/filepatch/src/: lib.rs
rodeo-cli/rbx-control/: Cargo.toml
rodeo-cli/rbx-control/src/: fflags.rs  lib.rs  paths.rs  place.rs  profile_scanner.rs
rodeo-cli/rbx-control/src/player/: mod.rs
rodeo-cli/rbx-control/src/studio/: CLAUDE.md  launch.rs  layout.rs  log_scanner.rs  mcp_client.rs  mod.rs  multiplayer_test.rs
rodeo-cli/rbx-control/tests/: real_snapshot.rs
rodeo-cli/src/: cli.rs  cli_run.rs  lib.rs  main.rs  platform.rs
rodeo-cli/src/commands/: kill.rs  mcp.rs  mod.rs  plugin.rs  ps.rs  run.rs  save.rs  serve.rs  setup.rs  spawn_canonical_client.rs  state.rs
rodeo-cli/src/commands/process_source/: adapters.rs  bundle.rs  directive.rs  execution.rs  mod.rs  source.rs  sourcemap.rs
rodeo-cli/src/master/: grpc.rs  mod.rs
rodeo-cli/src/runtime/: mcp.rs  mod.rs
rodeo-cli/src/shared/: target.rs
rodeo-cli/src/studio_backend/: backend.rs  connection.rs  http.rs  launch.rs  mod.rs  plugin_embed.rs  plugin_lock.rs  plugin_ws.rs
rodeo-cli/src/studio_backend/daemon/: client.rs  mod.rs  server.rs
rodeo-cli/src/util/: config.rs  http.rs  log.rs  log_capture.rs  mod.rs  output.rs  time.rs
rodeo-client/: Cargo.toml
rodeo-client-lune/: LICENSE  README.md  pesde.toml
rodeo-client-lune/src/: client.luau  daemon.luau  dom.luau  exec.luau  init.luau  run.luau  studio.luau  vm.luau
rodeo-client-lune/src/util/: base64.luau  uuid.luau
rodeo-client-lune/tests/: mptest.test.luau  runcode.test.luau  smoke.test.luau
rodeo-client-ts/: buf.gen.yaml  build.luau  package.json  tsconfig.json
rodeo-client-ts/src/: client.ts  daemon.ts  index.ts  run.ts
rodeo-client/src/: client.rs  dom.rs  lib.rs  run.rs  studio.rs  transport.rs  vm.rs
rodeo-client/src/runtime/: fs.rs  mod.rs  process.rs  roblox.rs  stream.rs
rodeo-mcp/: .darklua.json  .luaurc  enter_play_mode.luau  enter_run_mode.luau  exit_test_mode.luau  rodeo-studio-mcp-remap.json  screenshot.luau
rodeo-pkg/: default.project.json  wally.toml
rodeo-pkg/rodeo/shims/: process.luau  roblox.luau
rodeo-pkg/rodeo/src/: fs.luau  init.luau  io.luau  process.luau  roblox.luau  stream.luau
rodeo-pkg/shims/: fs.luau  init.luau  io.luau  stream.luau
rodeo-pkg/src/: fs.luau  init.luau  io.luau  process.luau  roblox.luau  stream.luau  types.luau
rodeo-pkg/src/_internal/: singleton.luau  types.luau
rodeo-plugin/: .darklua.json  .gitignore  .luaurc  build.luau  default.project.json  pesde.toml
rodeo-plugin/src/: init.server.luau
rodeo-proto/: Cargo.toml  build.rs
rodeo-proto/proto/: rodeo.proto  runtime.proto
rodeo-proto/src/: lib.rs
rodeo-shared/: build.luau  fs.luau  io.luau  limits.luau  logging.luau  normalize.luau  output.luau  process.luau  rpc.luau  run.luau  serialize.luau  stream.luau
rodeo-shared/proto/: rodeo.luau  runtime.luau
src/: init.luau
src/commands/: build.luau  exec.luau  once.luau  run.luau  serve.luau  status.luau
src/utils/: ExecConnection.luau  StudioConnection.luau  VmPipeline.luau  colors.luau  constants.luau  embedded_plugins.luau  execution.luau  output.luau  plugin.luau  sourcemap.luau  uuid.luau
studio-skills/: README.md  STUDIO_MCP_TOOLS.md  extract.luau
test/: rodeo.test.luau  testkit.luau
test/fixtures/: long_running.luau  simple_print.luau  with_error.luau  with_return.luau
test/once/: default.project.json  place.rbxlx  test.luau
tests-new/api/: helpers.ts  pkg.test.ts  runtime.test.ts
tests-new/cli/: helpers.ts  pkg.test.ts  runtime.test.ts  setup.test.ts
tests-new/utils/: executionTests.ts  log.ts  markers.ts  pkgTests.ts  profiling.ts
(+152 files in other folders)
