[package]
name = "rodeo-client"
version = "0.1.0"
edition = "2021"
description = "Canonical rodeo client — Studio/VM handles, runCode streaming, RPC dispatch"

[dependencies]
rodeo-proto = { path = "../rodeo-proto" }

connectrpc = { version = "0.3.2", features = ["client", "streaming"] }
buffa = { version = "0.3.0", features = ["json"] }
http = "1"
hyper = { version = "1", features = ["client", "http1"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roblox_install = "1"

# rbx-dom: binary <-> XML model serialization. Used by roblox.export to emit
# `.rbxmx` from the binary bytes SerializeInstancesAsync produces.
# rbx_binary must be >= 3.0: on 2026-06-30 Studio started storing the Tags
# property in the SharedString index, which 2.x fails to decode
# ("Type mismatch: Property Folder.Tags should be SharedString, but it was Tags").
rbx_binary = "3.0"
rbx_dom_weak = "4.2"
rbx_xml = "3.0"
